--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexa portfolio website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header-section">
+        <h1 class="logo">Alexa</h1>
+        <div class="header-link">
+            <a id="link" href="">Home</a>
+            <a id="link" href="">About</a>
+            <a id="link" href="">SKills</a>
+            <a id="link" href="">Services</a>
+            <a id="link" href="">Portfolio</a>
+            <a id="link" href="">Contactme</a>
+            <a id="link" href=""><i class="fas fa-donate"></i></a>
+        </div>
+    </header>
+    <section class="flexble-banner">
+      <div class="conteinar">
+       <div class="half-width">
+           <h1 class="hedding-size">Hi,I'm Alexa</h1>
+           <h2 class="heading-size2">frontend Devoloper</h2>
+           <p class="pragragh">Hi level experienec in web Design and Devolopment.knowledge produsing quality Work.</p>
+           <a class="button-link" href="">Contactme</a>
+           <div class="scoll">
+            <i class="fas fa-mouse"></i><a href="">Scoll dawn<i class="fas fa-level-down-alt"></i></a>
+           </div>
+       </div>
+   <div class="half-width">
+        <img class="img-size" src="img/bg.jpg" alt="">
+    </div>
+      </div>
+    </section>
 </body>
 </html>
