--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/loading.gif" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +27,13 @@
     </header>
     <section class="flexble-banner">
       <div class="conteinar">
+          <div class="half-width1">
+            <div class="site-bar">
+                <a id="site" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a id="site" href=""><i class="fab fa-facebook-f"></i></a>
+                <a id="site" href=""><i class="fab fa-github"></i></a>
+            </div>
+          </div>
        <div class="half-width">
            <h1 class="hedding-size">Hi,I'm Alexa</h1>
            <h2 class="heading-size2">frontend Devoloper</h2>
@@ -35,10 +43,55 @@
             <i class="fas fa-mouse"></i><a href="">Scoll dawn<i class="fas fa-level-down-alt"></i></a>
            </div>
        </div>
+       <img class="loding" src="img/loading.gif" alt=""> 
    <div class="half-width">
         <img class="img-size" src="img/bg.jpg" alt="">
     </div>
       </div>
+    </section>
+  
+    <section class="">
+        <div class="back-ground">
+            <div class="conteinar"> 
+                <div class="half-width">
+             <div class="mar-gin">
+                <h1 class="hedding-size">Luis Oenirque</h1>
+                <h4 class="user-h4">User Experienec/User Interface Expret</h4>
+                <a class="midem-button" href="">KNOW MORE</a>
+                <a class="midem-button" href="">HIRE ME</a>
+             </div>
+                </div>
+                <img class="loding" src="img/loading.gif" alt=""> 
+                <div class="half-width">
+                 <img src="img/Shape (1) (1).png" alt="">                  
+                </div>
+            </div>
+        </div>
+    </section>
+ <div class="header3-section">
+    <h1 class="hedding-size2">Spocilizing In</h1>
+    <p class="peragragh2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ipsam dolorum illo quae in nam impedit laboriosam, ea asperiores quia magnam!</p>
+ </div>
+    <section>
+     <div class="conteinar">
+        <div class="box-model">
+          <img class="width-jang" src="img/illustrator-3.png" alt="">
+          <h2 class="depo-size">Devoloper</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse soluta ratione modi iste temporibus rem. Aut reiciendis dolorem veritatis consequuntur obcaecati eius maxime voluptate quasi veniam delectus, repellat accusamus earum!</p>
+        </div>
+
+        <div class="box-model">
+            <img class="width-jang" src="img/illustrator-2.png" alt="">
+            <h2 class="depo-size">Devoloper</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse soluta ratione modi iste temporibus rem. Aut reiciendis dolorem veritatis consequuntur obcaecati eius maxime voluptate quasi veniam delectus, repellat accusamus earum!</p>
+          </div>
+
+          <div class="box-model">
+            <img class="width-jang" src="img/illustrator-1.png" alt="">
+            <h2 class="depo-size">Devoloper</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse soluta ratione modi iste temporibus rem. Aut reiciendis dolorem veritatis consequuntur obcaecati eius maxime voluptate quasi veniam delectus, repellat accusamus earum!</p>
+          </div>
+     </div>
     </section>
 </body>
 </html>
