--- a/index.html
+++ b/index.html
@@ -93,5 +93,22 @@
           </div>
      </div>
     </section>
+    <section class="footer-section4">
+        <div class="conteinar">
+            <div class="half-width">
+                <img src="img/person-5.png" alt="">
+            </div>
+
+            <div class="half-width button-aro">
+                <h6 class="h6-size">HI I'M HEREME!</h6>
+                <h1 class="Alex-calia"><span class="span-color">ALEX</span> CALIA</h1>
+                <p class="fontend-peragragh">A <span class="span-color">Font-End Web Devoloper</span> Positionated about creating interactive appication and experienec in the web</p>
+                <a class="resume" href="">Resume</a>
+                <a class="resume1" href=""><i class="fab fa-github"></i></a>
+                <a class="resume1" href=""><i class="fab fa-linkedin-in"></i></a>
+                <a class="resume1" href=""><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
