footer page compalited

--- a/index.html
+++ b/index.html
@@ -110,5 +110,9 @@
             </div>
         </div>
     </section>
+    <hr>
+    <footer>
+        <p style="text-align: center;color: #000;font-size:20px;"><i class="fas fa-shipping-fast"></i>&fontent Devoloperwb site<i class="fas fa-hand-holding-usd"></i></p>
+    </footer>
 </body>
 </html>
